--- a/compilador/compilador.cbp
+++ b/compilador/compilador.cbp
@@ -32,6 +32,7 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="analex.h" />
+		<Unit filename="codigo.txt" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
