--- a/compilador/compilador.cbp
+++ b/compilador/compilador.cbp
@@ -31,11 +31,19 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="analex.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="analex.h" />
+		<Unit filename="anasint.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="anasint.h" />
 		<Unit filename="codigo.txt" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="todoList.txt" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
