--- a/compiladorTeste/compiladorTeste.cbp
+++ b/compiladorTeste/compiladorTeste.cbp
@@ -31,6 +31,15 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="analex.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="analex.h" />
+		<Unit filename="anasint.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="anasint.h" />
+		<Unit filename="codigo.txt" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
